--- a/task1/task_1_index.html
+++ b/task1/task_1_index.html
@@ -29,14 +29,16 @@
 		-->
 
 		<article>
+
 			<section>
-				<h1>文章一级标题</h1>
-				<h2>文章二级标题</h2>
+				<h2>文章一级标题</h2>
+				<h3>文章二级标题</h3>
 				<p>
 					<span>文章作者</span>
 					<span>文章发布时间</span>
 				</p>
 			</section>
+
 			<section>
 				<p>
 					这是一个一个很长很长的段落，这是一个一个很长很长的段落，这是一个一个很长很长的段落，这是一个一个很长很长的段落，这是一个一个很长很长的段落，这是一个一个很长很长的段落，这是一个一个很长很长的段落，这是一个一个很长很长的段落，这是一个一个很长很长的段落，这是一个一个很长很长的段落，换行了<br>
@@ -47,13 +49,14 @@
 					这是一个一个很长很长的段落，这是一个一个很长很长的段落，这是一个一个很长很长的段落，这是一个一个很长很长的段落，这是一个一个很长很长的段落，这是一个一个很长很长的段落，这是一个一个很长很长的段落，这是一个一个很长很长的段落，这是一个一个很长很长的段落，这是一个一个很长很长的段落，换行了<br>
 					这是一个一个很长很长的段落，这是一个一个很长很长的段落，这是一个一个很长很长的段落，这是一个一个很长很长的段落，这是一个一个很长很长的段落，<a href="#">这里有一个链接，连接到http://ife.baidu.com</a>这是一个一个很长很长的段落，这是一个一个很长很长的段落，这是一个一个很长很长的段落，这是一个一个很长很长的段落，这是一个一个很长很长的段落，这是一个一个很长很长的段落，
 				</p>
-			</section>		
+			</section>
+
 		</article>
 
 		<article>
 			<section>
-				<h1>这是另一篇文章一级标题</h1>
-				<h2>文章二级标题</h2>
+				<h2>这是另一篇文章一级标题</h2>
+				<h3>文章二级标题</h3>
 				<p>
 					<span>文章作者</span>
 					<span>文章发布时间</span>
@@ -108,8 +111,8 @@
 
 		<article>
 			<section>
-				<h1>最后一篇文章一级标题</h1>
-				<h2>文章二级标题</h2>
+				<h2>最后一篇文章一级标题</h2>
+				<h3>文章二级标题</h3>
 				<p>
 					<span>文章作者</span>
 					<span>文章发布时间</span>
@@ -158,7 +161,7 @@
 					<tfoot>
 						<tr>
 							<td>总计</td>
-							<td>1000</td>
+							<td colspan="2">1000</td>
 					    </tr>
 					</tfoot>
 
@@ -167,9 +170,9 @@
 		</article>
 
 		<aside>
-			<h1>这里以后是一个侧栏，这是侧栏标题</h1>
+			<h2>这里以后是一个侧栏，这是侧栏标题</h2>
 			<form action="">
-				<h1>侧栏注册窗口标题</h1>
+				<h2>侧栏注册窗口标题</h2>
 
 					<label for="email">请输入邮箱地址：</label>
                     <input name="email" id="email" type="text" value="这是一个文本输入框"/>
@@ -209,7 +212,7 @@
 			</form>
 		</aside>
 		<footer>
-			<span>版权所有</span>&copy
+			<span>版权所有&copy;</span>
 		</footer>
 	</body>	
 </html>
