--- a/the_first_stage/task1/task_1_index.html
+++ b/the_first_stage/task1/task_1_index.html
@@ -34,7 +34,7 @@
 					这是一个一个很长很长的段落，这是一个一个很长很长的段落，这是一个一个很长很长的段落，这是一个一个很长很长的段落，这是一个一个很长很长的段落，<a href="#">这里有一个链接，连接到http://ife.baidu.com</a>这是一个一个很长很长的段落，这是一个一个很长很长的段落，这是一个一个很长很长的段落，这是一个一个很长很长的段落，这是一个一个很长很长的段落，这是一个一个很长很长的段落，
 				</p>
 
-				<img src="http://7oxjcj.com1.z0.glb.clouddn.com/IFE-img.png" alt="好看的图片">
+				<img src="http://7xrzdf.com1.z0.glb.clouddn.com/task1_1.PNG" alt="好看的图片">
 
 				<p>
 					这是一个一个很长很长的段落，这是一个一个很长很长的段落，这是一个一个很长很长的段落，这是一个一个很长很长的段落，这是一个一个很长很长的段落，这是一个一个很长很长的段落，这是一个一个很长很长的段落，这是一个一个很长很长的段落，这是一个一个很长很长的段落，这是一个一个很长很长的段落，换行了<br>
@@ -60,7 +60,7 @@
 					这是一个一个很长很长的段落，这是一个一个很长很长的段落，这是一个一个很长很长的段落，这是一个一个很长很长的段落，这是一个一个很长很长的段落，<a href="#">这里有一个链接，连接到http://ife.baidu.com</a>这是一个一个很长很长的段落，这是一个一个很长很长的段落，这是一个一个很长很长的段落，这是一个一个很长很长的段落，这是一个一个很长很长的段落，这是一个一个很长很长的段落，
 				</p>
 
-				<img src="http://7oxjcj.com1.z0.glb.clouddn.com/IFE-img.png" alt="好看的图片">
+				<img src="http://7xrzdf.com1.z0.glb.clouddn.com/task1_1.PNG" alt="好看的图片">
 
 				<ul>
 					<li>列表项目一</li>
@@ -74,32 +74,32 @@
 
 				<figure>
 					<figcaption>好看的图片</figcaption>
-					<img src="http://7oxjcj.com1.z0.glb.clouddn.com/IFE-img.png" alt="好看的图片">
+					<img src="http://7xrzdf.com1.z0.glb.clouddn.com/task1_1.PNG" alt="好看的图片">
 				</figure>
 
 				<figure>
 					<figcaption>好看的图片</figcaption>
-					<img src="http://7oxjcj.com1.z0.glb.clouddn.com/IFE-img.png" alt="好看的图片">
+					<img src="http://7xrzdf.com1.z0.glb.clouddn.com/task1_1.PNG" alt="好看的图片">
 				</figure>
 
 				<figure>
 					<figcaption>好看的图片</figcaption>
-					<img src="http://7oxjcj.com1.z0.glb.clouddn.com/IFE-img.png" alt="好看的图片">
+					<img src="http://7xrzdf.com1.z0.glb.clouddn.com/task1_1.PNG" alt="好看的图片">
 				</figure>
 
 				<figure>
 					<figcaption>好看的图片</figcaption>
-					<img src="http://7oxjcj.com1.z0.glb.clouddn.com/IFE-img.png" alt="好看的图片">
+					<img src="http://7xrzdf.com1.z0.glb.clouddn.com/task1_1.PNG" alt="好看的图片">
 				</figure>
 
 				<figure>
 					<figcaption>好看的图片</figcaption>
-					<img src="http://7oxjcj.com1.z0.glb.clouddn.com/IFE-img.png" alt="好看的图片">
+					<img src="http://7xrzdf.com1.z0.glb.clouddn.com/task1_1.PNG" alt="好看的图片">
 				</figure>
 
 				<figure>
 					<figcaption>好看的图片</figcaption>
-					<img src="http://7oxjcj.com1.z0.glb.clouddn.com/IFE-img.png" alt="好看的图片">
+					<img src="http://7xrzdf.com1.z0.glb.clouddn.com/task1_1.PNG" alt="好看的图片">
 				</figure>
 			</section>				
 		</article>
