--- a/the_first_stage/task3/task3.html
+++ b/the_first_stage/task3/task3.html
@@ -13,7 +13,7 @@
 			</div>
 
 			<div class="per-intro">
-				<img class="per-logo" src="images/per-logo.jpg" alt="个人logo">
+				<img class="per-logo-1" src="images/per-logo.jpg" alt="个人logo">
 				<img class="per-logo" src="images/per-logo.jpg" alt="个人logo">
 				<img class="per-logo" src="images/per-logo.jpg" alt="个人logo">
 				<img class="per-logo" src="images/per-logo.jpg" alt="个人logo">
