改变窗口大小未实现

--- a/part3/task3-1/task3-1.html
+++ b/part3/task3-1/task3-1.html
@@ -104,7 +104,7 @@
         </p>
         <p>xinjiade neirong </p>
     </section>
-    <section class="mask-hidden">
+    <section class="mask mask-hidden">
         <div class="dialog">
             <p class="title">这是一个浮出层</p>
             <p class="content">这是一个浮出层</p>
