排序还有问题

--- a/part3/task3-2/task3-2.html
+++ b/part3/task3-2/task3-2.html
@@ -5,16 +5,30 @@
     <title>task3-2UI组件之排序列表</title>
     <link rel="stylesheet" href="task3-2.css">
     <style>
+    td span{
+        margin: auto;
+        /*outline: 1px solid blue;*/
+        display: inline-block;
+        float: right;
+    }
+    td button{
+        display: block;
+        border: none;
+        width: 10px;
+        height: 10px;
+        margin-bottom: 2px;
+
+    }
     td{
         height: 30px;
-        width: 80px;
+        width: 50px;
+        padding:0 5px;
         outline:1px solid black;
     }
     </style>
   </head>
 <body>
-    <section>
-        
+    <section>   
     </section>
     <script src="task3-2.js"></script>
 </body>
