--- a/part3/task3-2/task3-2.html
+++ b/part3/task3-2/task3-2.html
@@ -4,30 +4,32 @@
     <meta charset="utf-8">
     <title>task3-2UI组件之排序列表</title>
     <link rel="stylesheet" href="task3-2.css">
-    <style>
-    td span{
-        margin: auto;
-        /*outline: 1px solid blue;*/
-        display: inline-block;
-        float: right;
-    }
-    td button{
-        display: block;
-        border: none;
-        width: 10px;
-        height: 10px;
-        margin-bottom: 2px;
-
-    }
-    td{
-        height: 30px;
-        width: 50px;
-        padding:0 5px;
-        outline:1px solid black;
-    }
-    </style>
   </head>
 <body>
+    <div class="description">
+        <h4>使用说明</h4>
+        <p>1.使用<strong>getNode(ele)</strong>在页面中找到要创建排序列表的位置</p>
+        <p>2.使用<strong>createTable(node, col, row)</strong>创建表格</p>
+        <p>3.使用<strong>addItems(arguments)</strong>向表格中添加一条数据</p>
+        <p>4.使用<strong>addSeqMethod(item)</strong>为表头的某一项添加排序方法</p>
+
+        <h4>示例</h4>
+        <pre>
+        var tableWrap = getNode('section');
+        createTable(tableWrap, 6, 5);
+        addItems(['姓名', '语文', '数学', '英语', '总分']);
+        addItems(['bean1', '2', '0', '2', '238']);
+        addItems(['bean2', '9', '8', '5', '264']);
+        addItems(['bean3', '7', '9', '7', '56']);
+        addItems(['bean4', '3', '1', '1', '78']);
+        addItems(['bean5', '10', '10', '10', '537']);
+        addSeqMethod('语文');
+        addSeqMethod('数学');
+        addSeqMethod('英语');
+        addSeqMethod('总分');
+        </pre>
+
+    </div>
     <section>   
     </section>
     <script src="task3-2.js"></script>
