--- a/part3/task3-4-6/task3-4-6.html
+++ b/part3/task3-4-6/task3-4-6.html
@@ -8,17 +8,16 @@
     </style>
   </head>
 <body>
-    <!-- <div class="desp">
-        <h4>日历组件</h4>
-        <h4>使用说明</h4>
-    </div> -->
+    <div class="desp">
+        <h3>日历组件</h3>
+    </div>
     <input class="input-box" type="text">
     <section class="calendar">
         <table>
             <tr>
-                <td><img src="left.png" alt=""></td>
+                <td class="left"><img src="left.png" alt=""></td>
                 <td class="show-month" colspan="5"></td>
-                <td><img src="right.png" alt=""></td>
+                <td class="right"><img src="right.png" alt=""></td>
             </tr>
             <tr>
                 <td>日</td>
