--- a/part4/task4-1/src/edit.html
+++ b/part4/task4-1/src/edit.html
@@ -3,21 +3,44 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>微型调查问卷</title>
-	<link rel="stylesheet" type="text/css" href="./styles/reset.css">
-	<link rel="stylesheet" type="text/css" href="./styles/edit.css">
-	<style type="text/css">
-		
-	</style>
+    <title>微型调查问卷</title>
+    <link rel="stylesheet" type="text/css" href="./styles/reset.css">
+    <link rel="stylesheet" type="text/css" href="./styles/edit.css">
+    <style type="text/css">
+        
+    </style>
 </head>
 <body>
     <section class="nav">
         <img src="./images/question.png">
-    	<span id="logo">问卷管理</span>
-    	<span id="per-ques">我的问题</span>
+        <span id="logo">问卷管理</span>
+        <span id="per-ques">我的问题</span>
     </section>
     <section class="main">
-    	
+        <div class="edit-ques">
+            <input class="ques-title" type="text" name="" value="这里是标题">
+            <div class="add-ques">
+                <pre>
+                sdfvsdf
+                dfvsdf
+
+            </pre>
+                <div class="add">
+                    <div class="type">
+                        <button>单选</button>
+                        <button>多选</button>
+                        <button>文本题</button>
+                    </div>
+                    <div class="add-btn">添加问题</div>
+                </div>
+            </div>
+            <span class="ddl">问卷截至日期<input type="" name="" value="2016-04-22"></span>
+            <span class="deploy">
+                <button>保存问卷</button>
+                <button>发布问卷</button>
+            </span>
+
+        </div>
     </section>
 </body>
 </html>
