--- a/part4/task4-1/src/index.html
+++ b/part4/task4-1/src/index.html
@@ -18,7 +18,7 @@
     </section>
     <section class="main">
     	<div class="create-ques">
-    		<button>新建问卷</button>
+    		<button><a href="./edit.html">新建问卷</a></button>
     	</div>
     </section>
 </body>
